# blackbox

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  FEATURES.md  PRD.md  README.md  docs.md  pyproject.toml
benchmarks/: README.md  __init__.py  budgets.json  harness.py  run_perf.py  scenarios.py
docs/: AGENT.md  AGENT_PROVIDER_WORKFLOW_VALIDATION.md  MODEL.md  MODEL_PROVIDER_WORKFLOW_VALIDATION.md  ORGANIZATION_PLAN.md  PRD.md  WORKFLOW_PROFILES.md  WORKSPACE.md
examples/: _bootstrap.py  agent_provider_claude_code.py  agent_provider_local_session.py  agent_provider_openai_agents.py  agent_provider_support_conversation.py  echo_run.py  launchmybakery.py  local_agent_with_tool.py  maia_bella_cucina_business_case.py  minimal_local_agent.py  minimal_model_turn.py  minimal_runtime_run.py  minimal_workspace.py  model_provider_classification.py  model_provider_form_fill.py  model_provider_knowledge_drawer.py  openai_responses_run.py  run_with_typed_output.py  workspace_provider_local_files.py  workspace_provider_snapshot_restore.py
specs/: cloud-agent-and-mcp-transport.md  model-provider-native-caching.md  model-provider-usage-cost-tracking.md  structured-outputs-and-hosted-tools.md  workspace-agents.md  workspace-execution-backends.md
src/agent_runtime/: README.md  __init__.py  hosted_tools.py  loop.py  runtime.py
src/agent_runtime/agents/: README.md  __init__.py  anthropic_managed.py  claude_code.py  google_platform.py  local.py  openai_cloud.py  vertex_agent_engine.py
src/agent_runtime/compat/: README.md  __init__.py  chat.py  providers.py
src/agent_runtime/core/: README.md  accounting.py  approvals.py  artifacts.py  cache.py  capabilities.py  content.py  errors.py  events.py  items.py  media.py  policy.py  prompts.py  raw.py  results.py  run_plan.py  serialization.py  session_state.py  sessions.py  state.py  stores.py  streams.py
src/agent_runtime/integrations/: README.md  __init__.py  google.py  openai.py
src/agent_runtime/mcp/: README.md  __init__.py  auth.py  cache.py  client.py  compat.py  connector.py  security.py  spec.py  toolset.py  transports.py  trust.py
src/agent_runtime/models/: README.md  __init__.py  _support.py  anthropic_messages.py  capability_validation.py  echo.py  gemini_generate_content.py  openai_responses.py  xai_responses.py
src/agent_runtime/observability/: README.md  __init__.py  evals.py  metrics.py  otel.py  presets.py  replay.py  sinks.py  traces.py
src/agent_runtime/output/: README.md  __init__.py  schema.py
src/agent_runtime/planning/: README.md  __init__.py  prompts.py  run_plan.py
src/agent_runtime/providers/: README.md  __init__.py  base.py  registry.py
src/agent_runtime/realtime/: README.md  __init__.py  capabilities.py  defaults.py  events.py  fake.py  provider.py  runtime.py
src/agent_runtime/runtime/: README.md  __init__.py  _helpers.py  agent_loop.py  agents.py  caches.py  chat.py  config.py  event_metadata.py  main.py  model.py  output.py  prompting.py  run_planning.py  session_results.py  tool_routing.py  tools.py  workspace_results.py  workspaces.py
src/agent_runtime/tools/: README.md  __init__.py  catalog.py  hosted.py  hosted_runtime.py  registry.py  results.py  routing.py  runtime.py  session.py  sources.py  toolsets.py
src/agent_runtime/workspace_agents/: README.md  __init__.py  permissions.py  registry.py  runtime.py  schedules.py  serialization.py  spec.py
src/agent_runtime/workspaces/: __init__.py  changes.py  cloud.py  docker.py  fake.py  git.py  local.py  provider.py  runtime.py  sandbox.py  sandbox_client.py  serialization.py  spec.py  tools.py
src/blackbox/: README.md  __init__.py  hosted_tools.py  loop.py
src/blackbox/agents/: README.md  __init__.py  claude_code.py  local.py  openai_cloud.py  vertex_agent_engine.py
src/blackbox/compat/: __init__.py  providers.py
src/blackbox/core/: README.md  accounting.py  (+14 more)
tests/: README.txt  VALIDATION.md  conftest.py  test_capabilities.py  test_capability_negatives.py  test_data_models.py  test_errors.py  test_local_agent.py  test_local_agent_tools.py  test_openai_integration.py  test_openai_responses.py  test_policy.py  test_provider_state.py  test_registry.py  test_runtime_blackbox.py  test_stores.py  test_tool_runtime.py  test_tool_runtime_errors.py
tests/contracts/: test_capability_honesty.py
tests/fixtures/: fake_anthropic_client.py  fake_claude_code_client.py  fake_gemini_client.py  fake_openai_client.py  scripted_model.py
tests/journey/: README.md
tests/perf/: __init__.py  test_benchmarks.py
tests/runtime/: test_agent_session_persistence.py  test_agent_session_run.py  test_agent_webhook_ingress.py  test_claude_code_agent_provider.py  test_dynamic_tool_routing.py  test_dynamic_toolsets.py  test_hosted_tool_loop.py  test_local_agent_provider.py  test_maia_business_case_example.py  test_mcp_toolset_runtime.py  test_model_capability_validation.py  test_observability_presets.py  test_openai_agents_provider.py  test_prompt_composition.py  test_provider_native_output.py  test_realtime_approvals.py  test_realtime_runtime.py  test_realtime_tool_loop.py  test_resume_run_from_saved_state.py  test_runtime_config.py  test_runtime_retry.py  test_runtime_run.py  test_runtime_stream.py  test_workspace_tool_loop.py
tests/unit/: test_chat_compat.py  test_compat_providers.py  test_echo_model.py  test_event_sinks.py  test_google_integrations.py  test_hosted_tool_capabilities.py  test_hosted_tools.py  test_hosted_tools_v2.py  test_local_workspace_provider.py  test_mcp_client.py  test_mcp_connector.py  test_mcp_spec.py  test_mcp_toolset.py  test_model_accounting.py  test_model_capability_profiles.py  test_model_provider_hardening.py  test_model_request_controls.py  test_multimodal_content.py  test_output_schema.py  test_provider_cache.py  test_realtime_capabilities.py  test_realtime_event_types.py  test_realtime_registry.py  test_sandbox_workspace_provider.py  test_state.py  test_stores_persistent.py  test_tool_runtime.py  test_trace_spans.py  test_workspace_agents.py  test_workspace_provider_contracts.py  test_workspace_runtime.py
(+236 files in other folders)
