[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agent-runtime-core"
version = "0.1.0"
description = "Provider-native runtime scaffold for model providers and cloud agent providers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=2,<3"]
openai-agents = ["openai-agents>=0.6,<1"]
xai = ["openai>=2,<3"]
anthropic = ["anthropic>=0.40,<1"]
claude-agent = ["claude-agent-sdk>=0.2,<1"]
google = ["google-genai>=1,<2"]
mcp = ["mcp>=1,<2"]
validate = ["pydantic>=2,<3"]
dev = [
  "pytest>=8,<10",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.9,<1",
  "mypy>=1.15,<2",
  "pydantic>=2,<3",
]
all = [
  "openai>=2,<3",
  "openai-agents>=0.6,<1",
  "anthropic>=0.40,<1",
  "claude-agent-sdk>=0.2,<1",
  "google-genai>=1,<2",
  "mcp>=1,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_runtime"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration_openai: requires OPENAI_API_KEY and network access",
  "integration_xai: requires XAI_API_KEY and network access",
  "integration_anthropic: requires ANTHROPIC_API_KEY and network access",
  "integration_gemini: requires GOOGLE_API_KEY and network access",
  "integration_google_platform: requires Google Agent Platform credentials",
  "integration_cloud_agent: requires cloud-agent provider credentials",
  "integration_mcp: requires a reachable MCP server",
]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "RUF"]
ignore = ["E501"]
